docs/7.52/md/abapselection-screen.md
---
title: "SELECTION-SCREEN"
description: |
  Syntax Forms Creating selection screens(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselection-screen_definition.htm) 1. SELECTION-SCREEN BEGIN OF SCREEN ... ... SELECTION-SCREEN END OF SCREEN ... Layout of selection screens(https://help.sap.com/doc/abapdocu_752_index_htm/7.52
version: "7.52"
category: "ui"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselection-screen.htm"
abapFile: "abapselection-screen.htm"
keywords: ["select", "do", "try", "data", "abapselection", "screen"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [SAP GUI User Dialogs](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_screens.htm) →  [Selection Screens](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenselection_screen.htm) →  [Create Selection Screens](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenselection_screen_create.htm) → 

SELECTION-SCREEN

Syntax Forms

[Creating selection screens](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselection-screen_definition.htm)
1\. SELECTION-SCREEN BEGIN OF SCREEN ...
  ...
  SELECTION-SCREEN END OF SCREEN ...
[Layout of selection screens](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselection-screen_layout.htm)
2\. SELECTION-SCREEN screen\_elements.
[Using elements from other selection screens](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselection-screen_include.htm)
3\. SELECTION-SCREEN INCLUDE ...
[Variants for the selection screens of logical databases (obsolete)](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselection-screen_ldb.htm)
4\. SELECTION-SCREEN ldb\_options.

Effect

The keyword SELECTION-SCREEN introduces statements for creating and changing the layout of [selection screens](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenselection_screen_glosry.htm "Glossary Entry"). All screen elements and attributes of selection screens that are not determined using [PARAMETERS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapparameters.htm) (single fields) and [SELECT-OPTIONS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselect-options.htm) are defined using SELECTION-SCREEN. These statements can be divided into the above areas and are covered in the corresponding sections.

Continue
[SELECTION-SCREEN - BEGIN OF](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselection-screen_definition.htm)
[SELECTION-SCREEN - screen\_elements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselection-screen_layout.htm)
[SELECTION-SCREEN INCLUDE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselection-screen_include.htm)