docs/7.57/md/abapselection-screen.md
---
title: "SELECTION-SCREEN"
description: |
  Syntax Forms Create selection screens(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselection-screen_definition.htm) 1. SELECTION-SCREEN BEGIN OF SCREEN ... ... SELECTION-SCREEN END OF SCREEN ... Layout of selection screens(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/e
version: "7.57"
category: "ui"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselection-screen.htm"
abapFile: "abapselection-screen.htm"
keywords: ["select", "do", "if", "try", "data", "abapselection", "screen"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [SAP GUI User Dialogs](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_screens.htm) →  [Selection Screens](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselection_screen.htm) →  [Selection Screens - Create](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselection_screen_create.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: SELECTION-SCREEN, ABAPSELECTION-SCREEN, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0A
Suggestion for improvement:)

SELECTION-SCREEN

Syntax Forms

[Create selection screens](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselection-screen_definition.htm)
1\. SELECTION-SCREEN BEGIN OF SCREEN ...
  ...
  SELECTION-SCREEN END OF SCREEN ...
[Layout of selection screens](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselection-screen_layout.htm)
2\. SELECTION-SCREEN screen\_elements.
[Use elements from other selection screens](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselection-screen_include.htm)
3\. SELECTION-SCREEN INCLUDE ...
[Variants for the selection screens of logical databases (obsolete)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselection-screen_ldb.htm)
4\. SELECTION-SCREEN ldb\_options.

Effect

The keyword SELECTION-SCREEN introduces statements for creating and changing the layout of [selection screens](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselection_screen_glosry.htm "Glossary Entry"). All screen elements and properties of selection screens that are not determined using [PARAMETERS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapparameters.htm) (single fields) and [SELECT-OPTIONS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselect-options.htm) are defined using SELECTION-SCREEN. These statements can be divided into the above areas and are covered in the corresponding sections.

Continue
[SELECTION-SCREEN, BEGIN OF](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselection-screen_definition.htm)
[SELECTION-SCREEN, screen\_elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselection-screen_layout.htm)
[SELECTION-SCREEN INCLUDE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapselection-screen_include.htm)